test/sema/typeck/mutating/call-trait-mutating-on-generic-immutable.out
error: cannot call mutating method on immutable value type.
--> call-trait-mutating-on-generic-immutable.dora:6:5
 | 
 | fn move_it[T: Movable](value: T) {
 |     value.move_by(10i32);
       ~~~~~~~~~~~~~~~~~~~~
 | }
 | 
1 error found.
